<resources>
    <string name="app_name">Farmer\'s Market</string>
    <string name="image_count_sample">5/9</string>
    <string name="product_image">Product Image</string>
    <string name="sample_product_name">Basket of Fresh Mangos</string>
    <string name="sample_price">NGN 350.00</string>
    <string name="sample_available_text">12 items available</string>
    <string name="availableText">%d items available</string>
    <string name="chat">Chat</string>
    <string name="call">Call</string>
    <string name="description">About this item</string>
    <string name="similar_items">Similar items</string>
    <string name="title_home">Home</string>
    <string name="title_message">Message</string>
    <string name="title_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_text">Not a member? Sign Up</string>
    <string name="login_text">Already a member? Login</string>
    <string name="create_new_account">Create New Account</string>
    <string name="fullname">Full Name</string>
    <string name="lastName">LastName</string>
    <string name="sign_up">Sign Up</string>
    <string name="product">Product</string>
    <string name="recently_viewed">Your recently viewed products</string>
    <string name="close_by">Nearby products</string>
    <string name="sample_miles">30 miles</string>
    <string name="distanceMiles">%d miles</string>
    <string name="search">Search</string>
    <string name="search_product">Search products</string>
    <string name="sales">Sales</string>
    <string name="purchase">Purchase</string>
    <string name="type_a_message">Type a message</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_picture">Product picture</string>
    <string name="delete_picture">delete picture</string>
    <string name="post_ad">Post Ad</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="no_items">No items available</string>
    <string name="search_currency">Search currency</string>
    <string name="select_category">Select category</string>
    <string name="sample_currency">USD</string>
    <string name="select_region">Select region</string>
    <string name="update_location">Updating location…</string>
    <string name="no_title">Title cannot be empty</string>
    <string name="no_desc">Description of product cannot be empty</string>
    <string name="no_price">Fill price for item</string>
    <string name="turn_on_location">Turn on location</string>
    <string name="acquiring_location">Acquiring location…</string>
    <string name="upload_min_1_picture">Upload at least a picture</string>
    <string name="default_currency">USD</string>
    <string name="sample_address">Memphis, Atlanta</string>
    <string name="add_pictures">Add pictures</string>
    <string name="available_qty">Available quantity</string>
    <string name="no_avail_specify">No available quantity specified</string>
    <string name="no_network_connection">No network connection</string>
    <string name="sample_item_bought">12 items purchased</string>
    <string name="sample_purchase_on">purchased on 12–12–2020 23:59</string>
    <string name="interested_ads">Interested Ads</string>
    <string name="my_ads">My Ads</string>
    <string name="viewed_at">Viewed at %s</string>
    <string name="posted_at">Posted at %s</string>
    <string name="add_new_product_require_location">Add new product require location to be enabled</string>
    <string name="ads">Ads</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="emailAddress">Email Address</string>
    <string name="new_msg_notification">New message notificiation</string>
    <string name="ringtone">Ringtone</string>
    <string name="vibrate">Vibrate</string>
</resources>